--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     'amarelo azul';
     grid-gap: 10px;
     border: 1px solid #ffffff;
-    background-color: #ffffff;
+    background-color: black;
     border-radius: 100%;
     width: 700px;
     height: 700px;
